[package]
name = "battery_monitor"
version = "0.1.0"
edition = "2024"
description = "Monitors battery charge and beeps when fully charged so you can unplug."
license = "MIT"
repository = "https://github.com/AnshulOP/battery_monitor"
homepage = "https://github.com/AnshulOP/battery_monitor"
keywords = ["battery", "monitor", "notification", "cli", "laptop"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
battery = "0.7"
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["utilapiset"] }
windows = { version = "0.58", features = [
    "UI_Notifications",
    "Data_Xml_Dom",
    "Foundation",
] }
